# STP

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
stp/: __init__.py  info.py  stochastic.py  typical_set.py
stp.egg-info/: PKG-INFO  SOURCES.txt
stp/tests/: __init__.py
stp/tools/: gui.py
