[project]
name = "stp"
version = "0.0.1.7"
authors = [
    { name = "Jonathan Delgado", email = "jonathandelgado0327@gmail.com"}
]
description = "Stochastic Thermodynamics in Python"

license = { file = "LICENSE" }
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1",
    "scipy>=1.14",
    "sphinx-rtd-theme>=3.1.0,<4.0.0"
]

keywords = ['stochastic', 'thermodynamics', 'information theory', 'python']
classifiers = [
    'Development Status :: 3 - Alpha',
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
]


[project.urls]
homepage = "https://jdelgado.net/"
repository = "https://github.com/otanan/STP"
documentation = "https://stochastic-thermodynamics-in-python.readthedocs.io/en/latest/"


[project.optional-dependencies]
rich = ["rich>=14.1"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"